--- a/main.css
+++ b/main.css
@@ -3,6 +3,16 @@
   src: url('clear-sans.ttf') format('truetype');
 }
 
+body {
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+  align-content: center;
+  align-items: center;
+  -webkit-align-items: center;
+}
+
 .board {
   width: 440px;
   height: 440px;
