--- a/style.scss
+++ b/style.scss
@@ -8,26 +8,53 @@
 }
 
 @for $fromRow from 0 through 3 {
-  @for $fromColumn from 0 through 3 {
-    @for $toRow from 0 through 3 {
-      @for $toColumn from 0 through 3 {
-        $name: move_from_#{$fromRow}_#{$fromColumn}_to_#{$toRow}_#{$toColumn};
+  @for $toRow from 0 through 3 {
+    $name: row_from_#{$fromRow}_to_#{$toRow};
 
-        .#{$name} {
-          -webkit-animation-duration: 0.20s;
-          -webkit-animation-name: $name;
-          -webkit-animation-fill-mode: forwards;
+    @if $fromRow == $toRow {
+      .#{$name} {
+        top: 110 * $toRow + 5;
+      }
+    } @else {
+      .#{$name} {
+        -webkit-animation-duration: 0.20s;
+        -webkit-animation-name: $name;
+        -webkit-animation-fill-mode: forwards;
+      }
+
+      @-webkit-keyframes $name {
+        from {
+          top: 110 * $fromRow + 5;
         }
+        to {
+          top: 110 * $toRow + 5;
+        }
+      }
+    }
+  }
+}
 
-        @-webkit-keyframes $name {
-          from {
-            top: 110 * $fromRow + 5;
-            left: 110 * $fromColumn + 5;
-          }
-          to {
-            top: 110 * $toRow + 5;
-            left: 110 * $toColumn + 5;
-          }
+@for $fromColumn from 0 through 3 {
+  @for $toColumn from 0 through 3 {
+    $name: column_from_#{$fromColumn}_to_#{$toColumn};
+
+    @if $fromColumn == $toColumn {
+      .#{$name} {
+        left: 110 * $toColumn + 5;
+      }
+    } @else {
+      .#{$name} {
+        -webkit-animation-duration: 0.20s;
+        -webkit-animation-name: $name;
+        -webkit-animation-fill-mode: forwards;
+      }
+
+      @-webkit-keyframes $name {
+        from {
+          left: 110 * $fromColumn + 5;
+        }
+        to {
+          left: 110 * $toColumn + 5;
         }
       }
     }
