--- a/main.css
+++ b/main.css
@@ -129,7 +129,7 @@ body {
 .tile.merged.isMoving {
   display: inline; }
 
-.tile.new {
+.tile.new, .overlay {
   -webkit-animation-duration: 0.2s;
           animation-duration: 0.2s;
   -webkit-animation-name: newTile;
@@ -159,3 +159,28 @@ body {
   to {
     -webkit-transform: scale(1);
             transform: scale(1); } }
+
+.overlay {
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  left: 0px;
+  right: 0px;
+  font-size: 55px;
+  font-weight: bolder;
+  background-color: #ddd;
+  opacity: 0.5;
+  border-radius: 7px; }
