Move SASS files to src/ and built files to built/

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Clear Sans";
-  src: url('clear-sans.ttf') format('truetype');
+  src: url('/clear-sans.ttf') format('truetype');
 }
 
 body {
