Add a Try again button to the overlay.

--- a/built/main.css
+++ b/built/main.css
@@ -168,6 +168,11 @@ body {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
@@ -181,6 +186,19 @@ body {
   right: 0px;
   font-size: 55px;
   font-weight: bolder;
-  background-color: #ddd;
-  opacity: 0.5;
+  background-color: rgba(221, 221, 221, 0.5);
   border-radius: 7px; }
+
+.tryAgain {
+  background-color: #876;
+  color: #fff;
+  height: 40px;
+  width: 200px;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px; }
+
+.overlay .message {
+  color: #666; }
