--- a/src/main.scss
+++ b/src/main.scss
@@ -149,6 +149,7 @@ body {
   top: 0px;
   bottom: 0px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -156,7 +157,22 @@ body {
   right: 0px;
   font-size: 55px;
   font-weight: bolder;
-  background-color: #ddd;
-  opacity: 0.5;
+  background-color: rgba(221, 221, 221, 0.5);
   border-radius: 7px;
+}
+
+.tryAgain {
+  background-color: #876;
+  color: #fff;
+  height: 40px;
+  width: 200px;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+}
+
+.overlay .message {
+  color: #666;
 }
